WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
85585
[EFL] EFL's LayoutTestController does not implement setApplicationCacheOriginQuota
https://bugs.webkit.org/show_bug.cgi?id=85585
Summary
[EFL] EFL's LayoutTestController does not implement setApplicationCacheOrigin...
Chris Dumez
Reported
2012-05-04 00:03:12 PDT
EFL's LayoutTestController needs to implement setApplicationCacheOriginQuota so that test cases in http/tests/appcache can be unskipped.
Attachments
Patch
(14.81 KB, patch)
2012-05-04 00:17 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch
(15.02 KB, patch)
2012-05-06 22:40 PDT
,
Chris Dumez
gustavo
: review+
gustavo
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(14.89 KB, patch)
2012-05-15 22:38 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Patch for landing
(15.11 KB, patch)
2012-05-15 22:47 PDT
,
Chris Dumez
webkit.review.bot
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(15.13 KB, patch)
2012-05-16 02:35 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2012-05-04 00:17:43 PDT
Created
attachment 140170
[details]
Patch
Raphael Kubo da Costa (:rakuco)
Comment 2
2012-05-06 12:02:02 PDT
Comment on
attachment 140170
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=140170&action=review
> Source/WebKit/efl/ewk/ewk_view.h:177 > + uint64_t (*exceeded_application_cache_quota)(Ewk_View_Smart_Data *sd, Ewk_Security_Origin* origin, int64_t defaultOriginQuota, int64_t totalSpaceNeeded);
Whenever you change this struct, you need to bump EWK_VIEW_SMART_CLASS_VERSION.
Chris Dumez
Comment 3
2012-05-06 22:40:16 PDT
Created
attachment 140479
[details]
Patch Bump EWK_VIEW_SMART_CLASS_VERSION.
Raphael Kubo da Costa (:rakuco)
Comment 4
2012-05-08 08:13:34 PDT
Comment on
attachment 140479
[details]
Patch Looks good.
Gustavo Noronha (kov)
Comment 5
2012-05-15 11:21:05 PDT
Comment on
attachment 140479
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=140479&action=review
I'm setting cq- because of the nit.
> Tools/DumpRenderTree/efl/DumpRenderTreeView.cpp:127 > + // Rounding up or down not really matter for these tests. It's
Nit: not really -> does not really
Chris Dumez
Comment 6
2012-05-15 22:38:09 PDT
Created
attachment 142149
[details]
Patch for landing
Chris Dumez
Comment 7
2012-05-15 22:47:45 PDT
Created
attachment 142153
[details]
Patch for landing
WebKit Review Bot
Comment 8
2012-05-16 01:28:07 PDT
Comment on
attachment 142153
[details]
Patch for landing Rejecting
attachment 142153
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/12706609
Chris Dumez
Comment 9
2012-05-16 02:35:17 PDT
Created
attachment 142207
[details]
Patch for landing Forgot to update reviewer name in Changelogs.
WebKit Review Bot
Comment 10
2012-05-16 04:26:05 PDT
Comment on
attachment 142207
[details]
Patch for landing Clearing flags on attachment: 142207 Committed
r117258
: <
http://trac.webkit.org/changeset/117258
>
WebKit Review Bot
Comment 11
2012-05-16 04:26:10 PDT
All reviewed patches have been landed. Closing bug.
Thiago Marcos P. Santos
Comment 12
2012-05-16 06:05:38 PDT
This patch caused a regression. See
bug 86611
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug