[EFL] EFL's LayoutTestController does not implement setApplicationCacheOriginQuota https://bugs.webkit.org/show_bug.cgi?id=85585

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-05-16
Reviewed by Gustavo Noronha Silva.

Source/WebKit/efl:

Add new function to Ewk_Security_Origin to set the application cache
quota. Implement reachedApplicationCacheOriginQuota in
ChromeClientEfl. Add function to the Ewk_View to report that the
application cache quota was reached.

* WebCoreSupport/ChromeClientEfl.cpp:
(WebCore::ChromeClientEfl::reachedApplicationCacheOriginQuota):
* ewk/ewk_security_origin.cpp:
(ewk_security_origin_application_cache_quota_set):
* ewk/ewk_security_origin.h:
* ewk/ewk_view.cpp:
(_Ewk_View_Private_Data):
(ewk_view_exceeded_application_cache_quota):
* ewk/ewk_view.h:
* ewk/ewk_view_private.h:

Tools:

Implement setApplicationCacheOriginQuota in EFL's
LayoutTestController.

* DumpRenderTree/efl/DumpRenderTreeChrome.cpp:
(DumpRenderTreeChrome::resetDefaultsToConsistentValues):
* DumpRenderTree/efl/DumpRenderTreeView.cpp:
(onExceededApplicationCacheQuota):
(drtViewAdd):
* DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
(LayoutTestController::setApplicationCacheOriginQuota):

LayoutTests:

Unskip the test cases that require implementation of
setApplicationCacheOriginQuota in EFL's LayoutTestController.

* platform/efl/Skipped:

Canonical link: https://commits.webkit.org/104190@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117258 268f45cc-cd09-0410-ab3c-d52691b4dbfc