Tools/DumpRenderTree/efl/DumpRenderTreeChrome.cpp
@@ -211,6 +211,7 @@ void DumpRenderTreeChrome::resetDefaultsToConsistentValues()
     ewk_settings_web_database_default_quota_set(5 * 1024 * 1024);
 
     ewk_settings_memory_cache_clear();
+    ewk_settings_application_cache_clear();
 
     ewk_view_setting_private_browsing_set(mainView(), EINA_FALSE);
     ewk_view_setting_spatial_navigation_set(mainView(), EINA_FALSE);
